[gd_scene load_steps=29 format=3 uid="uid://c3qye74v8861o"]

[ext_resource type="Texture2D" uid="uid://do8mg7p3av51r" path="res://assets/mision1/vault_nebula/Gray Matter Shot Levels - Sprite Sheet.png" id="1_aps8c"]
[ext_resource type="Script" path="res://projectiles/laser_vault_nova.gd" id="1_t58t4"]
[ext_resource type="Script" path="res://components/move_component.gd" id="2_nd2du"]
[ext_resource type="Script" path="res://components/scale_component.gd" id="3_n04hc"]
[ext_resource type="Script" path="res://components/flash_component.gd" id="4_05v4e"]
[ext_resource type="Script" path="res://components/hitbox_component.gd" id="5_huk2u"]

[sub_resource type="AtlasTexture" id="AtlasTexture_jnkov"]
atlas = ExtResource("1_aps8c")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_16pmi"]
atlas = ExtResource("1_aps8c")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6176p"]
atlas = ExtResource("1_aps8c")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p6bca"]
atlas = ExtResource("1_aps8c")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a26hf"]
atlas = ExtResource("1_aps8c")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_16nkl"]
atlas = ExtResource("1_aps8c")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x6o5v"]
atlas = ExtResource("1_aps8c")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u75jx"]
atlas = ExtResource("1_aps8c")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yl5c6"]
atlas = ExtResource("1_aps8c")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vwiqk"]
atlas = ExtResource("1_aps8c")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ceakd"]
atlas = ExtResource("1_aps8c")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f65gj"]
atlas = ExtResource("1_aps8c")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2nyt"]
atlas = ExtResource("1_aps8c")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_acq24"]
atlas = ExtResource("1_aps8c")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_70kk3"]
atlas = ExtResource("1_aps8c")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6mld1"]
atlas = ExtResource("1_aps8c")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7qpan"]
atlas = ExtResource("1_aps8c")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i5omu"]
atlas = ExtResource("1_aps8c")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pdteu"]
atlas = ExtResource("1_aps8c")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6r4bd"]
atlas = ExtResource("1_aps8c")
region = Rect2(96, 128, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_cte4g"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jnkov")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_16pmi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6176p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p6bca")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a26hf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_16nkl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x6o5v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u75jx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yl5c6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vwiqk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ceakd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f65gj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2nyt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_acq24")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_70kk3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6mld1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7qpan")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i5omu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pdteu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6r4bd")
}],
"loop": true,
"name": &"center",
"speed": 30.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7vwjy"]
size = Vector2(30, 14)

[node name="laser_vault_nova" type="Node2D"]
script = ExtResource("1_t58t4")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -4.76837e-07)
scale = Vector2(1.78906, 1.47656)
sprite_frames = SubResource("SpriteFrames_cte4g")
animation = &"center"
frame_progress = 0.519188

[node name="MoveComponent" type="Node" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("2_nd2du")
actor = NodePath("..")
velocity = Vector2(0, 150)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(8.34465e-07, -1)
scale = Vector2(1.5, 0.7)

[node name="ScaleComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("3_n04hc")
sprite = NodePath("../AnimatedSprite2D")
scale_amount = Vector2(5, 2)
scale_duration = 1.0

[node name="FlashComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("4_05v4e")
sprite = NodePath("../AnimatedSprite2D")
flash_duration = 0.1

[node name="HitboxComponent" type="Area2D" parent="."]
collision_layer = 0
script = ExtResource("5_huk2u")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_7vwjy")
